--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -45,5 +45,39 @@ TherapyEditView_flushPrescrizione_msg3=Orario di assunzione non impostato
 
 TherapyEditView_fillTutorCombo_msg1=Per utilizzare la funzionalit&agrave; TUTOR devi registrare almeno un tutor. Vuoi farlo adesso?
 
+TherapyEditView_tipoRicorrenzaCombo_ogniGiorno=Ogni giorno
+
+TherapyEditView_tipoRicorrenzaCombo_giorniAlterni=A giorni alterni
+
+TherapyEditView_tipoRicorrenzaCombo_settimanale=Settimanale
+
+TherapyEditView_tipoRicorrenzaCombo_mensile=Mensile
+
+TherapyEditView_tipoRicorrenzaCombo_trimestrale=Trimestrale
+
+TherapyEditView_tipoRicorrenzaCombo_semestrale=Semestrale
+
+TherapyEditView_tipoOrariCombo_aIntervalli=A intervalli regolari
+
+TherapyEditView_tipoOrariCombo_aOrariFissi=A orari fissi
+
+TherapyEditView_bottomBar_what=Cosa
+
+TherapyEditView_bottomBar_when=Quando
+
+TherapyEditView_bottomBar_hours=Orari
+
 TherapyListView_onDeleteBtn_msg1=Confermi la cancellazione delle terapie selezionate?
+
+ContactListView_showListaContatti_msg1=Non ci sono contatti di questo tipo.
+
+DosageEditView_setModel_msg1=Dosaggio delle ore {0}
+
+ReminderListView_showListaSomministrazioni_msg1=Non ci sono prescrizioni.
+
+ReminderListView_showRow_at_text=alle
+
+ReminderListView_today_text=Oggi
+
+ReminderListView_tomorrow_text=Domani
 
