--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -45,6 +45,8 @@ TherapyEditView_flushPrescrizione_msg3=Orario di assunzione non impostato
 
 TherapyEditView_fillTutorCombo_msg1=Per utilizzare la funzionalit&agrave; TUTOR devi registrare almeno un tutor. Vuoi farlo adesso?
 
+TherapyEditView_fillTutorCombo_msg2=Per utilizzare la funzionalit&agrave; TUTOR devi attivare la modalit&agrave; online. Vuoi farlo adesso?
+
 TherapyEditView_tipoRicorrenzaCombo_ogniGiorno=Ogni giorno
 
 TherapyEditView_tipoRicorrenzaCombo_giorniAlterni=A giorni alterni
@@ -80,4 +82,7 @@ ReminderListView_showRow_at_text=alle
 ReminderListView_today_text=Oggi
 
 ReminderListView_tomorrow_text=Domani
+
+SettingsView_onCkbOnlineMode_msg1=Nella modalit&agrave; online puoi mandare notifiche ad un tutor: per farlo devi avere la connessione dati ATTIVA e devi creare un account personale.
+
 
