--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditViewViewUiBinderImplGenMessages_it.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditViewViewUiBinderImplGenMessages_it.properties
@@ -5,3 +5,5 @@ deleteBtn.text=Cancella
 nameLabel.text=Nome:
 emailLabel.text=Email:
 phoneLabel.text=Telefono:
+addressLabel.text=Indirizzo:
+hoursLabel.text=Orari di ricevimento:
