--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages_it.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages_it.properties
@@ -4,6 +4,7 @@ saveBtn.text=Salva
 deleteBtn.text=Cancella
 titleLabel.text=Nome del farmaco:
 startDateLabel.text=Data di inizio:
+endDateLabel.text=Fine terapia:
 qtaLabel.html=Quantit&agrave;
 notificheLabel.html=Alert al tutor
 riordinoLabel.html=Alert per il riacquisto
