--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -85,4 +85,7 @@ ReminderListView_tomorrow_text=Domani
 
 SettingsView_onCkbOnlineMode_msg1=Nella modalit&agrave; online puoi mandare notifiche ad un tutor: per farlo devi avere la connessione dati ATTIVA e devi creare un account personale.
 
+AppClientFactory_FindSomministrazioniScaduteDelegate_msg1=Il sistema ha trovato diverse somministrazioni scadute. Vuoi annullarle tutte in blocco?
+
+AppClientFactory_FindSomministrazioniScaduteDelegate_msg2=Somministrazioni annullate
 
