--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -27,6 +27,8 @@ ContactEditView_flushModel_msg2=Manca l&apos;email o il numero di telefono
 
 ContactEditView_onDeleteBtn_msg1=Confermi la cancellazione di questo contatto?
 
+ContactEditView_header2_TUTOR_HTML=Inserisci i dati del TUTOR, la persona che vuoi venga informata se dimentichi di assumere il farmaco
+
 ReminderEditView_setModel_msg1=Hai preso questa medicina?
 
 ReminderEditView_setModel_title1=Promemoria scaduto
@@ -71,6 +73,8 @@ TherapyEditView_bottomBar_hours=Orari
 
 TherapyListView_onDeleteBtn_msg1=Confermi la cancellazione delle terapie selezionate?
 
+TherapyListView_showListaPrescrizioni_noRows_text=Non ci sono terapie.
+
 ContactListView_showListaContatti_msg1=Non ci sono contatti di questo tipo.
 
 DosageEditView_setModel_msg1=Dosaggio delle ore {0}
@@ -88,4 +92,6 @@ SettingsView_onCkbOnlineMode_msg1=Nella modalit&agrave; online puoi mandare noti
 AppClientFactory_FindSomministrazioniScaduteDelegate_msg1=Il sistema ha trovato diverse somministrazioni scadute. Vuoi annullarle tutte in blocco?
 
 AppClientFactory_FindSomministrazioniScaduteDelegate_msg2=Somministrazioni annullate
+
+AccountEditView_flushAndSaveAccount_msg1=Devi inserire il tuo nome
 
