--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -45,6 +45,8 @@ TherapyEditView_flushPrescrizione_msg2=Devi inserire almeno un orario di assunzi
 
 TherapyEditView_flushPrescrizione_msg3=Orario di assunzione non impostato
 
+TherapyEditView_flushPrescrizione_msg4=La data fine deve essere successiva alla di inizio
+
 TherapyEditView_fillTutorCombo_msg1=Per utilizzare la funzionalit&agrave; TUTOR devi registrare almeno un tutor. Vuoi farlo adesso?
 
 TherapyEditView_fillTutorCombo_msg2=Per utilizzare la funzionalit&agrave; TUTOR devi attivare la modalit&agrave; online. Vuoi farlo adesso?
