--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/AccountEditViewViewUiBinderImplGenMessages_it.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/AccountEditViewViewUiBinderImplGenMessages_it.properties
@@ -1,7 +1,7 @@
 
 header.HTML=Account paziente
 header2.HTML=Inserisci i tuoi dati
-saveBtn.text=Save
+saveBtn.text=Salva
 nameLabel.text=Nome:
 emailLabel.text=Email:
 phoneLabel.text=Telefono:
