--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -29,11 +29,13 @@ ContactEditView_onDeleteBtn_msg1=Confermi la cancellazione di questo contatto?
 
 ContactEditView_header2_TUTOR_HTML=Inserisci i dati del TUTOR, la persona che vuoi venga informata se dimentichi di assumere il farmaco
 
-ReminderEditView_setModel_msg1=Hai preso questa medicina?
-
 ReminderEditView_setModel_title1=Promemoria scaduto
 
+ReminderEditView_setModel_msg1=Hai preso questa medicina?
+
 ReminderEditView_setModel_msg2=Questo farmaco sta per finire, ne hai ancora {0}
+
+ReminderEditView_setModel_msg3=alle
 
 TherapyEditView_onDeleteBtn_msg1=Confermi la cancellazione di questa terapia?
 
@@ -96,4 +98,6 @@ AppClientFactory_FindSomministrazioniScaduteDelegate_msg1=Il sistema ha trovato 
 AppClientFactory_FindSomministrazioniScaduteDelegate_msg2=Somministrazioni annullate
 
 AccountEditView_flushAndSaveAccount_msg1=Devi inserire il tuo nome
+
+CheckSomministrazioniScaduteTask_run_msg1=Il sistema ha trovato una somministrazione scaduta, ma in questo momento sembra che la connessione dati non sia disponibile. Prova a riattivarla per registrare la somministrazione.
 
