--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -19,6 +19,18 @@ MainActivity_deleteContatto_msg1=Questo contatto non pu&ograve; essere cancellat
 
 MainController_checkConnectionIfOnlineMode_msg1=In online mode devi attivare la connessione dati
 
+MainController_validatePrescrizione_msg1=Manca il nome del farmaco
+
+MainController_validatePrescrizione_msg2=Manca l&apos;orario di assunzione
+
+MainController_validatePrescrizione_msg2b=Orario di assunzione non impostato
+
+MainController_validatePrescrizione_msg3=Quantit&agrave; per confezione errata
+
+MainController_validatePrescrizione_msg4=Manca l&apos;intervallo orario
+
+MainController_validatePrescrizione_msg5=Errato intervallo orario
+
 ContactEditView_onClosingView_msg1=Ci sono delle modifiche. Vuoi salvarle?
 
 ContactEditView_flushModel_msg1=Manca il nome
@@ -90,6 +102,10 @@ ReminderListView_showRow_at_text=alle
 ReminderListView_today_text=Oggi
 
 ReminderListView_tomorrow_text=Domani
+
+ReminderListView_showCanceledBtn_text_show=Mostra somministrazioni annullate
+
+ReminderListView_showCanceledBtn_text_hide=Nascondi somministrazioni annullate
 
 SettingsView_onCkbOnlineMode_msg1=Nella modalit&agrave; online puoi mandare notifiche ad un tutor: per farlo devi avere la connessione dati ATTIVA e devi creare un account personale.
 
