--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/constants/AppMessages_it.properties
@@ -119,3 +119,12 @@ AccountEditView_flushAndSaveAccount_msg1=Devi inserire il tuo nome
 
 CheckSomministrazioniScaduteTask_run_msg1=Il sistema ha trovato una somministrazione scaduta, ma in questo momento sembra che la connessione dati non sia disponibile. Prova a riattivarla per registrare la somministrazione.
 
+PatientEditView_onClosingView_msg1=Ci sono delle modifiche. Vuoi salvarle?
+
+PatientEditView_flushModel_msg1=Manca il nome
+
+PatientEditView_flushModel_msg2=Manca l&apos;email o il numero di telefono
+
+PatientEditView_onDeleteBtn_msg1=Confermi la cancellazione di questo paziente?
+
+PatientListView_showListaPazienti_msg1=Non ci sono pazienti salvati
