--- a/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages_it.properties
+++ b/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/TherapyEditViewViewUiBinderImplGenMessages_it.properties
@@ -19,4 +19,4 @@ orariAssunzioneLabel.text=Tempi di assunzione:
 oreLabel.text=ore
 dalleLabel.text=Dalle ore:
 alleLabel.text=Alle:
-
+pazienteLabel.html=Paziente:
