--- a/trunk/onscommons/extras/history.txt
+++ b/trunk/onscommons/extras/history.txt
@@ -1,4 +1,24 @@
+    ------------------------------------------------------------------------------------------------
+    
+	[20/05/2015]
 
+	it.mate.onscommons.client.ui.HasTapHandlerImpl.HasTapHandlerImpl(String)
+	
+	>> aggiunto costruttore con elementId
+    
+    ------------------------------------------------------------------------------------------------
+    
+	[20/05/2015]
+
+	it.mate.onscommons.client.onsen.OnsenUi.addTapHandler(String, TapHandler)
+	
+	>> aggiunto metodo con elementId
+    
+    ------------------------------------------------------------------------------------------------
+    
+	[20/05/2015]
+
+	it.mate.onscommons.client.event.TouchEventUtils >> rinominato in it.mate.onscommons.client.event.OnsEventUtils
     
     ------------------------------------------------------------------------------------------------
     
