--- a/onscommons/extras/changelog.txt
+++ b/onscommons/extras/changelog.txt
@@ -1,3 +1,10 @@
+    ------------------------------------------------------------------------------------------------
+    
+	[10/06/2015]
+
+
+	it.mate.onscommons.client.ui.OnsToolbar.createWaitingIcon()
+		>> cambiata waiting ico
 
     ------------------------------------------------------------------------------------------------
     
