--- a/trunk/therapyreminder/android/res/values/strings.xml
+++ b/trunk/therapyreminder/android/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
     <string name="app_name">Therapy Reminder</string>
+    <string name="launcher_name">@string/app_name</string>
+    <string name="activity_name">@string/launcher_name</string>
     
     <!-- 
     <string name="endpointApiRoot">http://10.0.2.2:8080/_ah/api</string>
